@@ -5,9 +5,9 @@ Subject: This patch performs Debian specific customizations of
 Author: Jan Dittberner <jandd@debian.org>
 --- a/setup.py
 +++ b/setup.py
-@@ -3,10 +3,6 @@
- PROJECT = 'virtualenvwrapper'
- VERSION = '2.6.1'
+@@ -5,10 +5,6 @@
+ # Change docs/sphinx/conf.py too!
+ VERSION = '2.6.3'
  
 -# Bootstrap installation of Distribute
 -import distribute_setup
@@ -16,7 +16,7 @@ Author: Jan Dittberner <jandd@debian.org>
  from setuptools import setup, find_packages
  
  from distutils.util import convert_path
-@@ -137,9 +133,6 @@
+@@ -139,9 +135,6 @@
  
      platforms = ['Any'],
  
@@ -26,7 +26,7 @@ Author: Jan Dittberner <jandd@debian.org>
      provides=['virtualenvwrapper',
                'virtualenvwrapper.user_scripts',
                ],
-@@ -147,14 +140,7 @@
+@@ -149,14 +142,7 @@
  
      namespace_packages = [ 'virtualenvwrapper' ],
      packages = find_packages(),
