@@ -2,6 +2,7 @@ virtualenvwrapper (2.6.3-1) UNRELEASED; urgency=low
 
   * New upstream version.
   * change debian/watch to look at PyPI
+  * refresh debian/patches/debianspecific-setup.py.patch
 
  -- Jan Dittberner <jandd@debian.org>  Thu, 03 Mar 2011 22:02:21 +0100
 
